# Beepop

./: .clang-format  .gitignore  10PctMites.res  15PctMites.res  2DCONST.H  6YrRef.wth  6YrRef98.wth  ActionPage.cpp  ActionPage.h  Adult.cpp  Adult.h  Bee.cpp  Bee.h  Book.csv  Brood.cpp  Brood.h  CALENDAR.H  ColdStorageSimulator.cpp  ColdStorageSimulator.h  Colony.cpp  Colony.h  ColonyDataPage.cpp  ColonyDataPage.h  ColonyResource.cpp  ColonyResource.h  ColonySelectionPage.cpp  ColonySelectionPage.h  CombRemDlg.cpp  CombRemDlg.h  Command Arguments.txt  CreateWeatherHdr.cpp  CreateWeatherHdr.h  DRONE.CPP  DRONE.H  DateBasedData.cpp  DateBasedData.h  DateRangeValues - Copy.cpp  DateRangeValues - Copy.h  DateRangeValues.cpp  DateRangeValues.h  (+278 more)
Backup/: VarroaPop.sln
HLP/: AfxCore.rtf  HTMLDefines.h  VarroaPop.cnt  VarroaPop.hhc  VarroaPop.hhk1  VarroaPop.hhp  VarroaPop.hhp1  VarroaPop.hm  VarroaPop.hpj  VarroaPop1.hm
HLP/html/: afxc0853.htm  afxc0c4l.htm  afxc0wc8.htm  afxc181c.htm  afxc1g4z.htm  afxc1vqd.htm  afxc1vvo.htm  afxc30hf.htm  afxc31ym.htm  afxc48h1.htm  afxc4r72.htm  afxc5hbh.htm  afxc6tv6.htm  afxc6ztx.htm  afxc72d3.htm  afxc72ya.htm  afxc738u.htm  afxc76y5.htm  afxc790z.htm  afxc7d4k.htm  afxc7dnp.htm  afxc85dk.htm  afxc8ble.htm  afxc8c8d.htm  afxc8iu9.htm  afxc961x.htm  afxc9gvm.htm  afxc9jci.htm  afxc9uwe.htm  afxc9vp0.htm  afxc9y05.htm  afxc9ysw.htm  afxp0434.htm  afxp0vjk.htm  afxp225w.htm  afxp3i9e.htm  afxp42b4.htm  afxp5hf8.htm  afxp7q2f.htm  afxp86av.htm
Linux/: CMakeLists.txt  DataAnalysis.ipynb  README.md  main.cpp  run-cold-storage-simulations-historical.bat  run-cold-storage-simulations.bat  run-simulations.py  setup.py  varroapopcmd.cpp  varroapopcmd.h  vpanalysis-backup.py
Linux/3rd/gzip-hpp/: README.md
Linux/cmake/Hunter/: config.cmake
Linux/datamodel/: CMakeLists.txt.template
Linux/lib/: CMakeLists.txt  agestructureoutputformatter.cpp  colonysizeoutputformatter.cpp  colonysizeoutputformatter.h  csv.cpp  csv.h  customoutputformatter.cpp  customoutputformatter.h  debugoutputformatter.cpp  debugoutputformatter.h  inouteventsoutputformatter.cpp  inouteventsoutputformatter.h  mapdataoutputformatter.cpp  mapdataoutputformatter.h  varroapopcmdbridge.cpp  varroapopcmdbridge.h
Linux/portcode/: CMakeLists.txt  VarroaPop.cpp  VarroaPop.h  afx.h  carchive.cpp  carchive.h  carray.h  carray.inline.h  ccmdtarget.h  cdialog.cpp  cdialog.h  cfile.cpp  cfile.h  cmapstringtoob.cpp  cmapstringtoob.h  cobject.cpp  cobject.h  coblist.cpp  coblist.h  coledatetime.cpp  coledatetime.h  cptrlist.cpp  cptrlist.h  cptrlist.inline.h  cstdiofile.cpp  cstdiofile.h  cstring.cpp  cstring.format.h  cstring.h  cstringarray.cpp  cstringarray.h  ctime.cpp  ctime.h  cuintarray.cpp  cuintarray.h  stdafx.h  varroapop.cpp
Linux/scripts/: cold-storage-simulations.py  plots.py  simulations.py
Linux/src/: agestructureoutputformatter.cpp  agestructureoutputformatter.h  colonysizeoutputformatter.cpp  colonysizeoutputformatter.h  main.cpp
Linux/tests/: CMakeLists.txt  main.cpp  test_aging.cpp  test_carchive.cpp  test_carray.cpp  test_cfile.cpp  test_cmapstringtoob.cpp  test_coblist.cpp  test_coledatetime.cpp  test_cptrlist.cpp  test_cstring.cpp  test_ctime.cpp  test_globaloptions.cpp  test_temperaturedata.cpp  test_validatealgorithms.cpp
Linux/tests/data/: Richland_bcc-csm1-1_rcp85_46.28125_-119.34375  rcp85-autoreset.txt  rcp85-reset.txt  rcp85-snapshot.txt  rcp85.txt
Linux/tests/data/bug-reset-jan-first/: rcp85-single-year.txt  rcp85-snapshot.txt
Linux/tests/data/snapshots/: snapshot-2020-04-15  snapshot-2030-01-01  snapshot-initial
Linux/tests/helpers/: common.cpp  common.h  testoutputformatter.cpp  testoutputformatter.h
Simulations/: NewForagingModel.R  Simulate.py  limited_locations.csv  parameters.json  plot.py
Simulations/VarroaPy/VarroaPy/: Tools.py
Simulations/VarroaPy/VarroaPy/VarroaPop/: VarroaPopSetup.msi
Simulations/VarroaPy/VarroaPy/files/exe/: .gitignore  simplified.vrp
Simulations/VarroaPy/VarroaPy/files/input/: modeled.txt  observed.txt  rcp45.txt  rcp85.txt  vp_input.txt
Simulations/VarroaPy/VarroaPy/files/output/: vp_results.txt
Simulations/VarroaPy/VarroaPy/files/weather/: data_46.03125_-118.34375.wth  data_46.28125_-119.34375.wth  data_47.40625_-120.34375.wth  data_48.40625_-119.53125.wth  midwest5YR.wth
